# github-actions-sample

./: README.md  lambda_config.json  lambdas-config.json  lambdas_config.json  monorepo.code-workspace  settings.json  sonar-project.properties
.github/workflows/: apply-infra-workflow.yaml  apply_infra_workflow.yaml  delete-feature-branch.yaml  delete_feature_branch.yaml  deploy-development.yaml  deploy-feature-branch.yaml  deploy-production.yaml  deploy_development.yaml  deploy_feature_branch.yaml  deploy_production.yaml  destroy-feature-branch.yaml  destroy-infra-workflow.yaml  destroy_infra_workflow.yaml  inspect_code_quality_workflow.yaml  python-workflow.yaml  python_workflow.yaml  run_python_workflow.yaml  terraform-workflow.yaml  test_display_workflow.yaml
.github/workflows/shared/: python-workflow.yaml  terraform-workflow.yaml
infra/: dynamodb_table.tf  lambda-1.tf  lambda_1.tf  lambda_2.tf  main.tf  provider.tf  s3_bucket.tf  vars.tf
infra/envs/: dev.tfvars  prd.tfvars
lambdas/lambda-1/: .coverage  pyproject.toml
lambdas/lambda-1/src/: index.py  lambda_1_handler.py
lambdas/lambda-1/tests/: test_lambda_1_handler.py
lambdas/lambda-2/: pyproject.toml
lambdas/lambda-2/tests/: test_lambda_2_handler.py
lambdas/lambda1/: .coverage  pyproject.toml  pytest.ini
lambdas/lambda1/src/: main.py
lambdas/lambda1/tests/: test_main.py
lambdas/lambda_1/: .coverage  .gitignore  pyproject.toml
lambdas/lambda_1/src/: lambda_1_handler.py
lambdas/lambda_1/tests/: conftest.py
lambdas/lambda_2/: .coverage  .gitignore  README.md  poe_tasks.toml  pyproject.toml
(+4 files in other folders)
