[tool.poetry]
name = "lambda_1"
version = "0.1.0"
description = ""
authors = ["icaroribeiro <icaroribeiro@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
aws-lambda-typing = "^2.20.0"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.0"
ruff = "^0.8.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
